--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "dependencies": {
     "@hapi/boom": "9.x.x",
     "haute-couture": "3.x.x",
-    "joi": "17.x.x"
+    "joi": "17.x.x",
+    "objection": "2.x.x",
+    "schwifty": "5.x.x"
+  },
+  "peerDependencies": {
+    "knex": "0.21.x"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
@@ -26,6 +31,7 @@
     "@hapi/glue": "8.x.x",
     "@hapi/hapi": "20.x.x",
     "@hapi/inert": "6.x.x",
+    "@hapi/hoek": "9.x.x",
     "@hapi/lab": "23.x.x",
     "@hapi/vision": "6.x.x",
     "babel-eslint": "10.x.x",
@@ -35,6 +41,8 @@
     "hapi-swagger": "14.x.x",
     "hpal": "2.x.x",
     "hpal-debug": "1.x.x",
+    "knex": "0.21.x",
+    "sqlite3": "5.x.x",
     "toys": "2.x.x"
   }
 }
