--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@hapi/boom": "9.x.x",
+    "@grslt/iut-encrypt": "^1.3.0",
+    "@hapi/boom": "^9.1.2",
+    "@hapi/jwt": "^2.0.1",
     "haute-couture": "3.x.x",
     "joi": "17.x.x",
     "mysql": "^2.18.1",
     "objection": "2.x.x",
+    "schmervice": "^1.6.0",
     "schwifty": "5.x.x",
     "sqlite3": "5.0.1"
   },
@@ -31,9 +34,9 @@
     "@hapi/eslint-config-hapi": "13.x.x",
     "@hapi/eslint-plugin-hapi": "4.x.x",
     "@hapi/glue": "8.x.x",
-    "@hapi/hapi": "20.x.x",
-    "@hapi/inert": "6.x.x",
+    "@hapi/hapi": "^20.1.2",
     "@hapi/hoek": "9.x.x",
+    "@hapi/inert": "6.x.x",
     "@hapi/lab": "23.x.x",
     "@hapi/vision": "6.x.x",
     "babel-eslint": "10.x.x",
