--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "haute-couture": "3.x.x",
     "joi": "17.x.x",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "objection": "2.x.x",
     "schmervice": "^1.6.0",
     "schwifty": "5.x.x",
